--- a/ct_LQR/Project.toml
+++ b/ct_LQR/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+MeshCatBenchmarkMechanisms = "e83dc370-f0ba-44d1-a240-217e19b8d23b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
