--- a/ct_LQR/Project.toml
+++ b/ct_LQR/Project.toml
@@ -1,4 +1,7 @@
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MatrixEquations = "99c1a7ee-ab34-5fd5-8076-27c950a045f4"
 MeshCatBenchmarkMechanisms = "e83dc370-f0ba-44d1-a240-217e19b8d23b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
